A few more questions sorted out into relevant Papers.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -492,9 +492,400 @@
 
 \qpaper{12}{The Universe of Universes}
 
+\qstart{Does time come by virtue of motion or because mind is inherently aware of sequentiality?}
+{by virtue of motion}{0}
+{because mind is inherently aware of sequentiality}{0}
+{both}{1}
+\qstop
+
+\qstart{Which of these are the three levels of time cognizance?}
+{Mind-perceived time --- consciousness of sequence, motion, and a sense of duration}{1}
+{Spirit-perceived time --- insight into motion Godward and the awareness of the motion of ascent to levels of increasing divinity}{1}
+{Personality sense of time created out of insight into Reality plus a consciousness of presence and an awareness of duration}{1}
+{Coordinate time as measured by the clock attached to a given moving observer's frame of reference}{0}
+\qstop
+
 \qpaper{13}{The Sacred Spheres of Paradise}
 
+\qstart{What are the executuve-headquarters of the Seven Master Spirits?}
+{seven sacred spheres of the Infinite Spirit}{1}
+{seven sacred spheres of the Universal Father}{0}
+{seven sacred spheres of the Eternal Son}{0}
+{Urantia, Mercury, Venus, Mars, and Pluto}{0}
+\qstop
+
+\qstart{Which material is used in the physical construction of the 21 sacred spheres of Paradise?}
+{unrevealed}{1}
+{mostly gold, iron, and some carbon in crystallised state}{0}
+{morontia materials}{0}
+{spirit}{0}
+\qstop
+
+\qstart{Where is the record of the origin of the 21 sacred spheres of Paradise stored?}
+{in the Most Holy area of upper Paradise}{0}
+{in the nether Paradise}{0}
+{on one of the billion perfect worlds of Havona}{0}
+{nowhere, it doesn't exist}{1}
+\qstop
+
+\qstart{Which of the 21 sacred spheres of Paradise are alike in physical constitution?}
+{the seven worlds of the Son}{1}
+{the seven worlds of the Father}{0}
+{the seven worlds of the Spirit}{0}
+\qstop
+
+\qstart{What kind of personal beings may sojourn on the seven sacred spheres of the Eternal Son?}
+{none}{1}
+{Seven Master Spirits}{0}
+{Architects of the Master Universe}{0}
+{only beings endowed with antigravity power}{0}
+\qstop
+
+\qstart{When are you granted clearance for Ascendington?}
+{upon attaining Havona}{1}
+{upon attaining Uversa}{0}
+{upon graduation from the Melchizedek schools}{0}
+{upon resurrection from the dead}{0}
+{upon fusion with the Thought Adjuster}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father is the Paradise rendezvous of the Thought Adjusters?}
+{Divinington}{1}
+{Sonarington}{0}
+{Spiritington}{0}
+{Vicegerington}{0}
+{Solitarington}{0}
+{Seraphington}{0}
+{Ascendington}{0}
+\qstop
+
+\qstart{What kind of beings function on Divinington?}
+{Father fragments (such as Thought Adjusters) and other beings of direct origin in the Universal Father}{1}
+{beings of unrevealed order}{0}
+{Architects of the Master Universe}{0}
+{Seven Master Spirits}{0}
+{Paradise Creator Sons}{0}
+\qstop
+
+\qstart{Which of these are among the secrets of Divinington?}
+{secret of the bestowal and mission of Thought Adjusters}{1}
+{nature and purpose of the Gravity Messengers}{1}
+{secret of the incarnation of the divine Sons}{0}
+{mysteries of reflectivity}{0}
+{secrets of trinitization}{0}
+{mystery of seraphic transport}{0}
+\qstop
+
+\qstart{When were the 21 sacred spheres of Paradise created?}
+{1 trillion years ago}{0}
+{9 billion years ago}{0}
+{250 billion years ago}{0}
+{never, they are eternal}{1}
+\qstop
+
+\qstart{How many of the 21 sacred spheres of Paradise illuminate both the Havona and the Isle of Paradise?}
+{0}{0}
+{7}{0}
+{14}{1}
+{21}{0}
+\qstop
+
+\qstart{How many of the 21 sacred spheres of Paradise illuminate only the Havona but NOT the Isle of Paradise?}
+{0}{0}
+{7}{1}
+{14}{0}
+{21}{0}
+\qstop
+
+\qstart{How many of the 21 sacred spheres of Paradise illuminate only the Isle of Paradise but not the Havona?}
+{0}{1}
+{7}{0}
+{14}{0}
+{21}{0}
+\qstop
+
+\qstart{Which of the 21 sacred spheres of Paradise illuminate both the Havona and the Isle of Paradise?}
+{worlds of the Father}{1}
+{worlds of the Son}{1}
+{worlds of the Spirit}{0}
+\qstop
+
+\qstart{Which of the 21 sacred spheres of Paradise illuminate only the Havona but not the Isle of Paradise?}
+{worlds of the Father}{0}
+{worlds of the Son}{0}
+{worlds of the Spirit}{1}
+\qstop
+
+\qstart{Who directs the seven Paradise sacred spheres of the Father?}
+{Trinitized Secrets of Supremacy}{1}
+{Seven Master Spirits}{0}
+{Trinity Teacher Sons}{0}
+{Melchizedeks}{0}
+{Ancients of Days}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father''?}
+{Divinington}{1}
+{Sonarington}{0}
+{Spiritington}{0}
+{Ascendington}{0}
+{Vicegerington}{0}
+{Solitarington}{0}
+{Seraphington}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Son''?}
+{Divinington}{0}
+{Sonarington}{1}
+{Spiritington}{0}
+{Ascendington}{0}
+{Vicegerington}{0}
+{Solitarington}{0}
+{Seraphington}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Spirit''?}
+{Divinington}{0}
+{Sonarington}{0}
+{Spiritington}{1}
+{Ascendington}{0}
+{Vicegerington}{0}
+{Solitarington}{0}
+{Seraphington}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father and the Son''?}
+{Divinington}{0}
+{Sonarington}{0}
+{Spiritington}{0}
+{Ascendington}{0}
+{Vicegerington}{1}
+{Solitarington}{0}
+{Seraphington}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father and the Spirit''?}
+{Divinington}{0}
+{Sonarington}{0}
+{Spiritington}{0}
+{Ascendington}{0}
+{Vicegerington}{0}
+{Solitarington}{1}
+{Seraphington}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father, Son, and Spirit''?}
+{Divinington}{0}
+{Sonarington}{0}
+{Spiritington}{0}
+{Ascendington}{1}
+{Vicegerington}{0}
+{Solitarington}{0}
+{Seraphington}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Son and the Spirit''?}
+{Divinington}{0}
+{Sonarington}{0}
+{Spiritington}{0}
+{Ascendington}{0}
+{Vicegerington}{0}
+{Solitarington}{0}
+{Seraphington}{1}
+\qstop
+
+\qstart{Which of these are among the secrets of Sonarington?}
+{secret of the bestowal and mission of Thought Adjusters}{0}
+{nature and purpose of the Gravity Messengers}{0}
+{secret of the incarnation of the divine Sons}{1}
+{mysteries of reflectivity}{0}
+{secrets of trinitization}{0}
+{mystery of seraphic transport}{0}
+\qstop
+
+\qstart{Which of these are among the secrets of Seraphington?}
+{secret of the bestowal and mission of Thought Adjusters}{0}
+{nature and purpose of the Gravity Messengers}{0}
+{secret of the incarnation of the divine Sons}{0}
+{mysteries of reflectivity}{0}
+{secrets of trinitization}{0}
+{mystery of seraphic transport}{1}
+\qstop
+
+\qstart{Which sector of Sonarington is the secret of incarnation locked in?}
+{seventh}{1}
+{first}{0}
+{third}{0}
+{fifth}{0}
+\qstop
+
+\qstart{Which of these are among the secrets of Spiritington?}
+{secret of the bestowal and mission of Thought Adjusters}{0}
+{nature and purpose of the Gravity Messengers}{0}
+{secret of the incarnation of the divine Sons}{0}
+{mysteries of reflectivity}{1}
+{secrets of trinitization}{0}
+{mystery of seraphic transport}{0}
+\qstop
+
+\qstart{Which of these are among the secrets of Vicegerington?}
+{secret of the bestowal and mission of Thought Adjusters}{0}
+{nature and purpose of the Gravity Messengers}{0}
+{secret of the incarnation of the divine Sons}{0}
+{mysteries of reflectivity}{0}
+{secrets of trinitization}{1}
+{mystery of seraphic transport}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father is the home of Solitary Messengers?}
+{Solitarington}{1}
+{Vicegerington}{0}
+{Sonarington}{0}
+{Seraphington}{0}
+{Ascendington}{0}
+\qstop
+
+\qstart{Which of the sacred spheres of the Father is the status sphere of the Universe Power Directors during the present universe age?}
+{Solitarington}{1}
+{Vicegerington}{0}
+{Sonarington}{0}
+{Seraphington}{0}
+{Ascendington}{0}
+\qstop
+
+\qstart{Which of these are among the secrets of Solitarington?}
+{secret of the bestowal and mission of Thought Adjusters}{0}
+{nature and purpose of the Gravity Messengers}{0}
+{secret of the incarnation of the divine Sons}{0}
+{mysteries of reflectivity}{0}
+{secrets of trinitization}{1}
+{the secrets of the personal relation of the Infinite Spirit with certain of the higher offspring of the Third Source and Center}{1}
+\qstop
+
+\qstart{Which of these are among the secrets of Ascendington?}
+{secret of the bestowal and mission of Thought Adjusters}{0}
+{nature and purpose of the Gravity Messengers}{0}
+{secret of the incarnation of the divine Sons}{0}
+{mysteries of reflectivity}{0}
+{secrets of trinitization}{0}
+{mystery of the evolution of an immortal soul within the mind of a mortal and material creature}{1}
+\qstop
+
+\qstart{Which of the seven sacred spheres of the Father will become fully open to our inspection?}
+{Divinington}{0}
+{Sonarington}{0}
+{Spiritington}{0}
+{Ascendington}{1}
+{Vicegerington}{0}
+{Solitarington}{0}
+{Seraphington}{0}
+\qstop
+
+\qstart{How many Trinitized Secrets of Supremacy direct Ascendington?}
+{10}{1}
+{12}{0}
+{7}{0}
+{3}{0}
+\qstop
+
+\qstart{Who knows all the secrets of all seven Paradise sacred spheres of the Father?}
+{Trinitized Secrets of Supremacy}{1}
+{Seven Master Spirits}{0}
+{Trinity Teacher Sons}{0}
+{Melchizedeks}{0}
+{Ancients of Days}{0}
+\qstop
+
 \qpaper{14}{The Central and Divine Universe}
+
+\qstart{How many perfect spheres does Havona consist of?}
+{1 billion}{1}
+{100 billion}{0}
+{500 million}{0}
+{144000}{0}
+{7}{0}
+{12}{0}
+\qstop
+
+\qstart{Select all space conditions that exist from the periphery of Paradise to the inner borders of the seven superuniverses?}
+{The quiescent midspace zones impinging on Paradise}{1}
+{The clockwise processional of the three Paradise and the seven Havona circuits}{1}
+{The semiquiet space zone separating the Havona circuits from the dark gravity bodies of the central universe}{1}
+{The inner, counterclockwise-moving belt of the dark gravity bodies}{1}
+{The second unique space zone dividing the two space paths of the dark gravity bodies}{1}
+{The outer belt of dark gravity bodies, revolving clockwise around Paradise}{1}
+{A third space zone—a semiquiet zone—separating the outer belt of dark gravity bodies from the innermost circuits of the seven superuniverses}{1}
+\qstop
+
+\qstart{How many circuits are the billion worlds of Havona arranged in?}
+{7}{1}
+{12}{0}
+{3}{0}
+{4}{0}
+{1000}{0}
+{1024}{0}
+\qstop
+
+\qstart{How many worlds are in the innermost circuit of Havona?}
+{35 million+}{1}
+{245 million+}{0}
+{25 million+}{0}
+{1 million+}{0}
+{365}{0}
+\qstop
+
+\qstart{How many worlds are in the outermost circuit of Havona?}
+{35 million+}{0}
+{245 million+}{1}
+{25 million+}{0}
+{1 million+}{0}
+{365}{0}
+\qstop
+
+\qstart{Are the Havona planetary circuits superimposed?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{Does perception of time exist on the Havona circuits?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{Is the length of year the same on all the worlds of a given Havona circuit?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{How does the length of year change from circuit to circuit in Havona?}
+{decreases from the outermost to the innermost circuit}{1}
+{increases from the outermost to the innermost circuit}{0}
+{stays the same}{0}
+\qstop
+
+\qstart{Where is the length of Paradise-Havona day decided and broadcast from?}
+{the seven sacred spheres of the Infinite Spirit}{1}
+{the seven sacred spheres of the Universal Father}{0}
+{the seven sacred spheres of the Eternal Son}{0}
+{on one of the billion perfect spheres of Havona}{0}
+{Isle of Paradise}{0}
+\qstop
+
+\qstart{How many planes do the three circuits of Paradise satellites and the seven circuits of Havona worlds move in?}
+{one}{1}
+{seven}{0}
+{ten}{0}
+{three}{0}
+\qstop
+
+\qstart{Based on what periodic movement is the standard Paradise-Havona day defined?}
+{revolution of the inner Havona circuit around the Isle of Paradise}{1}
+{revolution of the outer Havona circuit around the Isle of Paradise}{0}
+{average revolution of all Havona circuits around the Isle of Paradise}{0}
+{arbitrarily decided by the Paradise Deities}{0}
+{space respiration}{0}
+\qstop
+
 
 \qstart{One Paradise-Havona day is equivalent to how much Urantia time?}
 {100 years}{0}
@@ -504,7 +895,207 @@
 {1 day}{0}
 \qstop
 
+\qstart{Where do the spirit beings dwell?}
+{in nebulous space}{0}
+{on ethereal spirit worlds}{0}
+{on material spheres}{1}
+\qstop
+
+\qstart{How many basic chemical elements does the material of Havona consist of?}
+{1000}{1}
+{100}{0}
+{256}{0}
+{512}{0}
+{1024}{0}
+{1000000}{0}
+\qstop
+
+\qstart{How many forms of energy exist in Havona?}
+{7}{1}
+{12}{0}
+{49}{0}
+{100}{0}
+{10}{0}
+\qstop
+
+\qstart{How many phases of excitation does each of the basic forms of energy in Havona manifest?}
+{7}{1}
+{49}{0}
+{3}{0}
+{1000}{0}
+{4}{0}
+\qstop
+
+\qstart{How many different sensation stimuli do Havona natives respond to?}
+{49}{1}
+{7}{0}
+{3}{0}
+{1000}{0}
+{4}{0}
+\qstop
+
+\qstart{How many of the 49 physical stimuli of Havona worlds would excite a reaction in Urantia mortals?}
+{0}{1}
+{49}{0}
+{7}{0}
+{5}{0}
+{4}{0}
+{47}{0}
+\qstop
+
+\qstart{Why are the Havona forms of energy threefold whereas the superuniverse forms of energy are twofold?}
+{because the creation of Havona is threefold (Trinity) whereas the creation of local universes is twofold (Creator Son and Creative Mother Spirit)}{1}
+{for unknown or unrevealed reason}{0}
+\qstop
+
+\qstart{What type of government exists on the perfect worlds of Havona?}
+{none (perfection makes government unnecessary)}{1}
+{democracy}{0}
+{anarchy}{0}
+{theocracy}{0}
+{aristocracy}{0}
+\qstop
+
+\qstart{Who directs each of the billion worlds of the central universe?}
+{one Eternal of Days}{1}
+{three Eternals of Days}{0}
+{three Ancients of Days}{0}
+{one Creator Son and one Creative Mother Spirit}{0}
+\qstop
+
+\qstart{Which of these are the basic forms of living things and beings on Havona worls?}
+{material}{1}
+{morontial}{1}
+{spiritual}{1}
+{absonite}{1}
+{ultimate}{1}
+{coabsolute}{1}
+{absolute}{1}
+\qstop
+
+\qstart{Are decay and death a part of the cycle of life on the Havona worlds?}
+{no}{1}
+{yes}{0}
+\qstop
+
+\qstart{Are Havona natives reproducing beings?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{Which circuit of Havona are the new arrivals domiciled on?}
+{7}{1}
+{6}{0}
+{5}{0}
+{4}{0}
+{3}{0}
+{2}{0}
+{1}{0}
+\qstop
+
+\qstart{Which circuit of Havona are the pilgrims transferred to when they attain identity comprehension of their superuniverse Master Spirit?}
+{7}{0}
+{6}{1}
+{5}{0}
+{4}{0}
+{3}{0}
+{2}{0}
+{1}{0}
+\qstop
+
+\qstart{Which circuit of Havona are the pilgrims transferred to when they attain realization of Supremacy?}
+{7}{0}
+{6}{0}
+{5}{1}
+{4}{0}
+{3}{0}
+{2}{0}
+{1}{0}
+\qstop
+
+\qstart{Which circuit of Havona are the pilgrims transferred to when they attain the Infinite Spirit?}
+{7}{0}
+{6}{0}
+{5}{0}
+{4}{1}
+{3}{0}
+{2}{0}
+{1}{0}
+\qstop
+
+\qstart{Which circuit of Havona are the pilgrims transferred to when they attain the Eternal Son?}
+{7}{0}
+{6}{0}
+{5}{0}
+{4}{0}
+{3}{1}
+{2}{0}
+{1}{0}
+\qstop
+
+\qstart{Which circuit of Havona are the pilgrims transferred to when they have recognized the Universal Father?}
+{7}{0}
+{6}{0}
+{5}{0}
+{4}{0}
+{3}{0}
+{2}{1}
+{1}{0}
+\qstop
+
+\qstart{Which circuit of Havona are the pilgrims transferred to when they have been accepted into the service of Paradise?}
+{7}{0}
+{6}{0}
+{5}{0}
+{4}{0}
+{3}{0}
+{2}{0}
+{1}{1}
+\qstop
+
+\qstart{Which of the Havona worlds can a pilgrim of ascent visit without the need to be ensupernaphimed?}
+{all worlds of those circuits which have already been traversed}{1}
+{all worlds of all circuits}{0}
+{all worlds of the present circuit only}{0}
+{none of them}{0}
+\qstop
+
 \qpaper{15}{The Seven Superuniverses}
+
+\qstart{When was the sevenfold scheme of the superuniverse organization and government formulated?}
+{early in the materialization of the universal creation}{1}
+{in the eternal past}{0}
+{it was never planned, the superuniverses just evolved that way spontaneously, by chance}{0}
+\qstop
+
+\qstart{Who are the rulers of the seven evolutionary superuniverses?}
+{Ancients of Days}{1}
+{Eternals of Days}{0}
+{Perfections of Days}{0}
+{Recents of Days}{0}
+{Faithfuls of Days}{0}
+{Unions of Days}{0}
+\qstop
+
+\qstart{Which curve do the seven superuniverses traverse in space?}
+{Ellipse}{1}
+{Circle}{0}
+{Cardioid}{0}
+{Archimedean Spiral}{0}
+{Lemniscate}{0}
+{Epicycloid}{0}
+{Hypocycloid}{0}
+{Astroid}{0}
+\qstop
+
+\qstart{Who knows the location and name of every inhabited world in space?}
+{Ancients of Days}{0}
+{Architects of the Master Universe}{0}
+{Universal Father}{1}
+{Paradise Creator Sons}{0}
+{Universal Censors}{0}
+\qstop
+
 
 \qstart{How many inhabited planets constitute a system?}
 {1000}{1}
@@ -3678,595 +4269,6 @@
 {25\%}{0}
 {95\%}{0}
 {75\%}{0}
-\qstop
-
-\qstart{Which of these are the three levels of time cognizance?}
-{Mind-perceived time --- consciousness of sequence, motion, and a sense of duration}{1}
-{Spirit-perceived time --- insight into motion Godward and the awareness of the motion of ascent to levels of increasing divinity}{1}
-{Personality sense of time created out of insight into Reality plus a consciousness of presence and an awareness of duration}{1}
-{Coordinate time as measured by the clock attached to a given moving observer's frame of reference}{0}
-\qstop
-
-\qstart{Does time come by virtue of motion or because mind is inherently aware of sequentiality?}
-{by virtue of motion}{0}
-{because mind is inherently aware of sequentiality}{0}
-{both}{1}
-\qstop
-
-\qstart{What are the executuve-headquarters of the Seven Master Spirits?}
-{seven sacred spheres of the Infinite Spirit}{1}
-{seven sacred spheres of the Universal Father}{0}
-{seven sacred spheres of the Eternal Son}{0}
-{Urantia, Mercury, Venus, Mars, and Pluto}{0}
-\qstop
-
-\qstart{Which material is used in the physical construction of the 21 sacred spheres of Paradise?}
-{unrevealed}{1}
-{mostly gold, iron, and some carbon in crystallised state}{0}
-{morontia materials}{0}
-{spirit}{0}
-\qstop
-
-\qstart{Where is the record of the origin of the 21 sacred spheres of Paradise stored?}
-{in the Most Holy area of upper Paradise}{0}
-{in the nether Paradise}{0}
-{on one of the billion perfect worlds of Havona}{0}
-{nowhere, it doesn't exist}{1}
-\qstop
-
-\qstart{Which of the 21 sacred spheres of Paradise are alike in physical constitution?}
-{the seven worlds of the Son}{1}
-{the seven worlds of the Father}{0}
-{the seven worlds of the Spirit}{0}
-\qstop
-
-\qstart{What kind of personal beings may sojourn on the seven sacred spheres of the Eternal Son?}
-{none}{1}
-{Seven Master Spirits}{0}
-{Architects of the Master Universe}{0}
-{only beings endowed with antigravity power}{0}
-\qstop
-
-\qstart{When are you granted clearance for Ascendington?}
-{upon attaining Havona}{1}
-{upon attaining Uversa}{0}
-{upon graduation from the Melchizedek schools}{0}
-{upon resurrection from the dead}{0}
-{upon fusion with the Thought Adjuster}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father is the Paradise rendezvous of the Thought Adjusters?}
-{Divinington}{1}
-{Sonarington}{0}
-{Spiritington}{0}
-{Vicegerington}{0}
-{Solitarington}{0}
-{Seraphington}{0}
-{Ascendington}{0}
-\qstop
-
-\qstart{What kind of beings function on Divinington?}
-{Father fragments (such as Thought Adjusters) and other beings of direct origin in the Universal Father}{1}
-{beings of unrevealed order}{0}
-{Architects of the Master Universe}{0}
-{Seven Master Spirits}{0}
-{Paradise Creator Sons}{0}
-\qstop
-
-\qstart{Which of these are among the secrets of Divinington?}
-{secret of the bestowal and mission of Thought Adjusters}{1}
-{nature and purpose of the Gravity Messengers}{1}
-{secret of the incarnation of the divine Sons}{0}
-{mysteries of reflectivity}{0}
-{secrets of trinitization}{0}
-{mystery of seraphic transport}{0}
-\qstop
-
-\qstart{When were the 21 sacred spheres of Paradise created?}
-{1 trillion years ago}{0}
-{9 billion years ago}{0}
-{250 billion years ago}{0}
-{never, they are eternal}{1}
-\qstop
-
-\qstart{How many of the 21 sacred spheres of Paradise illuminate both the Havona and the Isle of Paradise?}
-{0}{0}
-{7}{0}
-{14}{1}
-{21}{0}
-\qstop
-
-\qstart{How many of the 21 sacred spheres of Paradise illuminate only the Havona but NOT the Isle of Paradise?}
-{0}{0}
-{7}{1}
-{14}{0}
-{21}{0}
-\qstop
-
-\qstart{How many of the 21 sacred spheres of Paradise illuminate only the Isle of Paradise but not the Havona?}
-{0}{1}
-{7}{0}
-{14}{0}
-{21}{0}
-\qstop
-
-\qstart{Which of the 21 sacred spheres of Paradise illuminate both the Havona and the Isle of Paradise?}
-{worlds of the Father}{1}
-{worlds of the Son}{1}
-{worlds of the Spirit}{0}
-\qstop
-
-\qstart{Which of the 21 sacred spheres of Paradise illuminate only the Havona but not the Isle of Paradise?}
-{worlds of the Father}{0}
-{worlds of the Son}{0}
-{worlds of the Spirit}{1}
-\qstop
-
-\qstart{Who directs the seven Paradise sacred spheres of the Father?}
-{Trinitized Secrets of Supremacy}{1}
-{Seven Master Spirits}{0}
-{Trinity Teacher Sons}{0}
-{Melchizedeks}{0}
-{Ancients of Days}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father''?}
-{Divinington}{1}
-{Sonarington}{0}
-{Spiritington}{0}
-{Ascendington}{0}
-{Vicegerington}{0}
-{Solitarington}{0}
-{Seraphington}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Son''?}
-{Divinington}{0}
-{Sonarington}{1}
-{Spiritington}{0}
-{Ascendington}{0}
-{Vicegerington}{0}
-{Solitarington}{0}
-{Seraphington}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Spirit''?}
-{Divinington}{0}
-{Sonarington}{0}
-{Spiritington}{1}
-{Ascendington}{0}
-{Vicegerington}{0}
-{Solitarington}{0}
-{Seraphington}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father and the Son''?}
-{Divinington}{0}
-{Sonarington}{0}
-{Spiritington}{0}
-{Ascendington}{0}
-{Vicegerington}{1}
-{Solitarington}{0}
-{Seraphington}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father and the Spirit''?}
-{Divinington}{0}
-{Sonarington}{0}
-{Spiritington}{0}
-{Ascendington}{0}
-{Vicegerington}{0}
-{Solitarington}{1}
-{Seraphington}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Father, Son, and Spirit''?}
-{Divinington}{0}
-{Sonarington}{0}
-{Spiritington}{0}
-{Ascendington}{1}
-{Vicegerington}{0}
-{Solitarington}{0}
-{Seraphington}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father can be called ``the bosom of the Son and the Spirit''?}
-{Divinington}{0}
-{Sonarington}{0}
-{Spiritington}{0}
-{Ascendington}{0}
-{Vicegerington}{0}
-{Solitarington}{0}
-{Seraphington}{1}
-\qstop
-
-\qstart{Which of these are among the secrets of Sonarington?}
-{secret of the bestowal and mission of Thought Adjusters}{0}
-{nature and purpose of the Gravity Messengers}{0}
-{secret of the incarnation of the divine Sons}{1}
-{mysteries of reflectivity}{0}
-{secrets of trinitization}{0}
-{mystery of seraphic transport}{0}
-\qstop
-
-\qstart{Which of these are among the secrets of Seraphington?}
-{secret of the bestowal and mission of Thought Adjusters}{0}
-{nature and purpose of the Gravity Messengers}{0}
-{secret of the incarnation of the divine Sons}{0}
-{mysteries of reflectivity}{0}
-{secrets of trinitization}{0}
-{mystery of seraphic transport}{1}
-\qstop
-
-\qstart{Which sector of Sonarington is the secret of incarnation locked in?}
-{seventh}{1}
-{first}{0}
-{third}{0}
-{fifth}{0}
-\qstop
-
-\qstart{Which of these are among the secrets of Spiritington?}
-{secret of the bestowal and mission of Thought Adjusters}{0}
-{nature and purpose of the Gravity Messengers}{0}
-{secret of the incarnation of the divine Sons}{0}
-{mysteries of reflectivity}{1}
-{secrets of trinitization}{0}
-{mystery of seraphic transport}{0}
-\qstop
-
-\qstart{Which of these are among the secrets of Vicegerington?}
-{secret of the bestowal and mission of Thought Adjusters}{0}
-{nature and purpose of the Gravity Messengers}{0}
-{secret of the incarnation of the divine Sons}{0}
-{mysteries of reflectivity}{0}
-{secrets of trinitization}{1}
-{mystery of seraphic transport}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father is the home of Solitary Messengers?}
-{Solitarington}{1}
-{Vicegerington}{0}
-{Sonarington}{0}
-{Seraphington}{0}
-{Ascendington}{0}
-\qstop
-
-\qstart{Which of the sacred spheres of the Father is the status sphere of the Universe Power Directors during the present universe age?}
-{Solitarington}{1}
-{Vicegerington}{0}
-{Sonarington}{0}
-{Seraphington}{0}
-{Ascendington}{0}
-\qstop
-
-\qstart{Which of these are among the secrets of Solitarington?}
-{secret of the bestowal and mission of Thought Adjusters}{0}
-{nature and purpose of the Gravity Messengers}{0}
-{secret of the incarnation of the divine Sons}{0}
-{mysteries of reflectivity}{0}
-{secrets of trinitization}{1}
-{the secrets of the personal relation of the Infinite Spirit with certain of the higher offspring of the Third Source and Center}{1}
-\qstop
-
-\qstart{Which of these are among the secrets of Ascendington?}
-{secret of the bestowal and mission of Thought Adjusters}{0}
-{nature and purpose of the Gravity Messengers}{0}
-{secret of the incarnation of the divine Sons}{0}
-{mysteries of reflectivity}{0}
-{secrets of trinitization}{0}
-{mystery of the evolution of an immortal soul within the mind of a mortal and material creature}{1}
-\qstop
-
-\qstart{Which of the seven sacred spheres of the Father will become fully open to our inspection?}
-{Divinington}{0}
-{Sonarington}{0}
-{Spiritington}{0}
-{Ascendington}{1}
-{Vicegerington}{0}
-{Solitarington}{0}
-{Seraphington}{0}
-\qstop
-
-\qstart{How many Trinitized Secrets of Supremacy direct Ascendington?}
-{10}{1}
-{12}{0}
-{7}{0}
-{3}{0}
-\qstop
-
-\qstart{Who knows all the secrets of all seven Paradise sacred spheres of the Father?}
-{Trinitized Secrets of Supremacy}{1}
-{Seven Master Spirits}{0}
-{Trinity Teacher Sons}{0}
-{Melchizedeks}{0}
-{Ancients of Days}{0}
-\qstop
-
-\qstart{How many perfect spheres does the central universe of Havona consist of?}
-{1 billion}{1}
-{100 billion}{0}
-{500 million}{0}
-{144000}{0}
-{7}{0}
-{12}{0}
-\qstop
-
-\qstart{Select all space conditions that exist from the periphery of Paradise to the inner borders of the seven superuniverses?}
-{The quiescent midspace zones impinging on Paradise}{1}
-{The clockwise processional of the three Paradise and the seven Havona circuits}{1}
-{The semiquiet space zone separating the Havona circuits from the dark gravity bodies of the central universe}{1}
-{The inner, counterclockwise-moving belt of the dark gravity bodies}{1}
-{The second unique space zone dividing the two space paths of the dark gravity bodies}{1}
-{The outer belt of dark gravity bodies, revolving clockwise around Paradise}{1}
-{A third space zone—a semiquiet zone—separating the outer belt of dark gravity bodies from the innermost circuits of the seven superuniverses}{1}
-\qstop
-
-\qstart{How many circuits are the billion worlds of Havona arranged in?}
-{7}{1}
-{12}{0}
-{3}{0}
-{4}{0}
-{1000}{0}
-{1024}{0}
-\qstop
-
-\qstart{How many worlds are in the innermost circuit of Havona?}
-{35 million+}{1}
-{245 million+}{0}
-{25 million+}{0}
-{1 million+}{0}
-{365}{0}
-\qstop
-
-\qstart{How many worlds are in the outermost circuit of Havona?}
-{35 million+}{0}
-{245 million+}{1}
-{25 million+}{0}
-{1 million+}{0}
-{365}{0}
-\qstop
-
-\qstart{Are the Havona planetary circuits superimposed?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Does perception of time exist on the Havona circuits?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{Is the length of year the same on all the worlds of a given Havona circuit?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{How does the length of year change from circuit to circuit in Havona?}
-{decreases from the outermost to the innermost circuit}{1}
-{increases from the outermost to the innermost circuit}{0}
-{stays the same}{0}
-\qstop
-
-\qstart{Where is the length of Paradise-Havona day decided and broadcast from?}
-{the seven sacred spheres of the Infinite Spirit}{1}
-{the seven sacred spheres of the Universal Father}{0}
-{the seven sacred spheres of the Eternal Son}{0}
-{on one of the billion perfect spheres of Havona}{0}
-{Isle of Paradise}{0}
-\qstop
-
-\qstart{How many planes do the three circuits of Paradise satellites and the seven circuits of Havona worlds move in?}
-{one}{1}
-{seven}{0}
-{ten}{0}
-{three}{0}
-\qstop
-
-\qstart{Based on what periodic movement is the standard Paradise-Havona day defined?}
-{revolution of the inner Havona circuit around the Isle of Paradise}{1}
-{revolution of the outer Havona circuit around the Isle of Paradise}{0}
-{average revolution of all Havona circuits around the Isle of Paradise}{0}
-{arbitrarily decided by the Paradise Deities}{0}
-{space respiration}{0}
-\qstop
-
-\qstart{Where do the spirit beings dwell?}
-{in nebulous space}{0}
-{on ethereal spirit worlds}{0}
-{on material spheres}{1}
-\qstop
-
-\qstart{How many basic chemical elements does the material of Havona consist of?}
-{1000}{1}
-{100}{0}
-{256}{0}
-{512}{0}
-{1024}{0}
-{1000000}{0}
-\qstop
-
-\qstart{How many forms of energy exist in Havona?}
-{7}{1}
-{12}{0}
-{49}{0}
-{100}{0}
-{10}{0}
-\qstop
-
-\qstart{How many phases of excitation does each of the basic forms of energy in Havona manifest?}
-{7}{1}
-{49}{0}
-{3}{0}
-{1000}{0}
-{4}{0}
-\qstop
-
-\qstart{How many different sensation stimuli do Havona natives respond to?}
-{49}{1}
-{7}{0}
-{3}{0}
-{1000}{0}
-{4}{0}
-\qstop
-
-\qstart{How many of the 49 physical stimuli of Havona worlds would excite a reaction in Urantia mortals?}
-{0}{1}
-{49}{0}
-{7}{0}
-{5}{0}
-{4}{0}
-{47}{0}
-\qstop
-
-\qstart{Why are the Havona forms of energy threefold whereas the superuniverse forms of energy are twofold?}
-{because the creation of Havona is threefold (Trinity) whereas the creation of local universes is twofold (Creator Son and Creative Mother Spirit)}{1}
-{for unknown or unrevealed reason}{0}
-\qstop
-
-\qstart{What type of government exists on the perfect worlds of Havona?}
-{none (perfection makes government unnecessary)}{1}
-{democracy}{0}
-{anarchy}{0}
-{theocracy}{0}
-{aristocracy}{0}
-\qstop
-
-\qstart{Who directs each of the billion worlds of the central universe?}
-{one Eternal of Days}{1}
-{three Eternals of Days}{0}
-{three Ancients of Days}{0}
-{one Creator Son and one Creative Mother Spirit}{0}
-\qstop
-
-\qstart{Which of these are the basic forms of living things and beings on Havona worls?}
-{material}{1}
-{morontial}{1}
-{spiritual}{1}
-{absonite}{1}
-{ultimate}{1}
-{coabsolute}{1}
-{absolute}{1}
-\qstop
-
-\qstart{Are decay and death a part of the cycle of life on the Havona worlds?}
-{no}{1}
-{yes}{0}
-\qstop
-
-\qstart{Are Havona natives reproducing beings?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Which circuit of Havona are the new arrivals domiciled on?}
-{7}{1}
-{6}{0}
-{5}{0}
-{4}{0}
-{3}{0}
-{2}{0}
-{1}{0}
-\qstop
-
-\qstart{Which circuit of Havona are the pilgrims transferred to when they attain identity comprehension of their superuniverse Master Spirit?}
-{7}{0}
-{6}{1}
-{5}{0}
-{4}{0}
-{3}{0}
-{2}{0}
-{1}{0}
-\qstop
-
-\qstart{Which circuit of Havona are the pilgrims transferred to when they attain realization of Supremacy?}
-{7}{0}
-{6}{0}
-{5}{1}
-{4}{0}
-{3}{0}
-{2}{0}
-{1}{0}
-\qstop
-
-\qstart{Which circuit of Havona are the pilgrims transferred to when they attain the Infinite Spirit?}
-{7}{0}
-{6}{0}
-{5}{0}
-{4}{1}
-{3}{0}
-{2}{0}
-{1}{0}
-\qstop
-
-\qstart{Which circuit of Havona are the pilgrims transferred to when they attain the Eternal Son?}
-{7}{0}
-{6}{0}
-{5}{0}
-{4}{0}
-{3}{1}
-{2}{0}
-{1}{0}
-\qstop
-
-\qstart{Which circuit of Havona are the pilgrims transferred to when they have recognized the Universal Father?}
-{7}{0}
-{6}{0}
-{5}{0}
-{4}{0}
-{3}{0}
-{2}{1}
-{1}{0}
-\qstop
-
-\qstart{Which circuit of Havona are the pilgrims transferred to when they have been accepted into the service of Paradise?}
-{7}{0}
-{6}{0}
-{5}{0}
-{4}{0}
-{3}{0}
-{2}{0}
-{1}{1}
-\qstop
-
-\qstart{Which of the Havona worlds can a pilgrim of ascent visit without the need to be ensupernaphimed?}
-{all worlds of those circuits which have already been traversed}{1}
-{all worlds of all circuits}{0}
-{all worlds of the present circuit only}{0}
-{none of them}{0}
-\qstop
-
-\qstart{When was the sevenfold scheme of the superuniverse organization and government formulated?}
-{early in the materialization of the universal creation}{1}
-{in the eternal past}{0}
-{it was never planned, the superuniverses just evolved that way spontaneously, by chance}{0}
-\qstop
-
-\qstart{Who are the rulers of the seven evolutionary superuniverses?}
-{Ancients of Days}{1}
-{Eternals of Days}{0}
-{Perfections of Days}{0}
-{Recents of Days}{0}
-{Faithfuls of Days}{0}
-{Unions of Days}{0}
-\qstop
-
-\qstart{Which curve do the seven superuniverses traverse in space?}
-{Ellipse}{1}
-{Circle}{0}
-{Cardioid}{0}
-{Archimedean Spiral}{0}
-{Lemniscate}{0}
-{Epicycloid}{0}
-{Hypocycloid}{0}
-{Astroid}{0}
-\qstop
-
-\qstart{Who knows the location and name of every inhabited world in space?}
-{Ancients of Days}{0}
-{Architects of the Master Universe}{0}
-{Universal Father}{1}
-{Paradise Creator Sons}{0}
-{Universal Censors}{0}
 \qstop
 
 \qstart{Which of these are the units of supergovernment in the Grand Universe?}
