Italicize "not" for emphasis instead of capitalizing.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -590,7 +590,7 @@
 {21}{0}
 \qstop
 
-\qstart{How many of the 21 sacred spheres of Paradise illuminate only the Havona but NOT the Isle of Paradise?}
+\qstart{How many of the 21 sacred spheres of Paradise illuminate only the Havona but \bibemph{not} the Isle of Paradise?}
 {0}{0}
 {7}{1}
 {14}{0}
@@ -2888,7 +2888,7 @@
 {iniquity}{0}
 \qstop
 
-\qstart{Which of these are NOT absonite beings?}
+\qstart{Which of these are \bibemph{not} absonite beings?}
 {Architects of the Master Universe}{0}
 {Primary Master Force Organizers}{0}
 {Transcendental Recorders}{0}
@@ -2989,7 +2989,7 @@
 {12}{0}
 \qstop
 
-\qstart{Which of these is NOT one of the seven adjutant mind-spirits?}
+\qstart{Which of these is \bibemph{not} one of the seven adjutant mind-spirits?}
 {intuition}{0}
 {understanding}{0}
 {courage}{0}
@@ -3422,7 +3422,7 @@
 {2 years}{0}
 \qstop
 
-\qstart{Which of these places did Jesus NOT visit?}
+\qstart{Which of these places did Jesus \bibemph{not} visit?}
 {India}{1}
 {Greece}{0}
 {Malta}{0}
@@ -3462,7 +3462,7 @@
 {only Peter and Andrew}{0}
 \qstop
 
-\qstart{Which of these Apostles did Jesus NOT personally select?}
+\qstart{Which of these Apostles did Jesus \bibemph{not} personally select?}
 {Andrew}{0}
 {Peter}{0}
 {James}{0}
@@ -3657,7 +3657,7 @@
 {Paradise has no location in space, but has time}{0}
 \qstop
 
-\qstart{Which of these Apostles were NOT put to death?}
+\qstart{Which of these Apostles were \bibemph{not} put to death?}
 {Andrew}{0}
 {Peter}{0}
 {James}{0}
@@ -5365,7 +5365,7 @@
 {Mount Ararat}{0}
 \qstop
 
-\qstart{The Nodites were divided as to the plans for the Tower of Babel. There were three differing views as to the purpose of building the tower. Which view is NOT one of them?}
+\qstart{The Nodites were divided as to the plans for the Tower of Babel. There were three differing views as to the purpose of building the tower. Which view is \bibemph{not} one of them?}
 {As a memorial of Nodite history and racial superiority}{0}
 {To commemorate the Dilmun culture which was foreseen as becoming a great center of commerce, art and manufacture}{0}
 {For the worship of the Father of all, and for making atonement for the folly of their progenitors in participating in the Caligastia rebellion. That the whole purpose of the new city should be to take the place of Dalamatia}{0}
